# RoCEv2-congestion-telemetry-engine

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  VM_SETUP.md
.claude/: settings.json
.claude/hooks/: check_doorbell_order.py  post_session_check.sh  pre_bash_guard.sh
.claude/skills/: kernel_module_dev.md  skill-userspace-telemetry-engine.md
kernel_driver/: Makefile  mock_nic.c
scripts/: run_demo.sh
src/: bridge.cpp  bridge.h  config.h  http_server.cpp  http_server.h  main.cpp  metrics.cpp  metrics.h  rocev2_header.h  simulator.cpp  simulator.h  telemetry.cpp  telemetry.h  ui_html.cpp  ui_html.h
tests/unit/: CMakeLists.txt  test_buffer_model.cpp  test_header_layout.cpp  test_metrics_ring.cpp  test_rate_validator.cpp  test_telemetry_window.cpp
